[package]
name = "lcmds"
authors = ["https://github.com/dcechano"]
version = "0.1.0"
edition = "2021"
description = "CLI to help remember and reference cli tools. Language agnostic."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
console = "0.15.7"
regex = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.2"
